<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleDo</string>

    <string name="layout_header_overdue">OVERDUE</string>
    <string name="layout_header_today">TODAY</string>
    <string name="layout_header_tomorrow">TOMORROW</string>
    <string name="layout_header_future">FUTURE</string>
    <string name="layout_header_someday">SOMEDAY</string>
    <string name="editText_hint">I want to…</string>
    <string name="button_go">Go</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="updates">Updates:\n - Added \'School\' group. \n - Bug fixes.</string>
    <string name="eula">Thank you for downloading SimpleDo!\n\nThis application is licensed under the GNU GPL
        v3.0.\n\nBy using this application, you agree to these terms and conditions.
    </string>

    <string name="date_header">Date</string>
    <string name="time_header">Time</string>
    <string name="reminder_header">Reminder</string>

    <string-array name="group_array">
        <item>No Group</item>
        <item>Work</item>
        <item>Personal</item>
        <item>School</item>
    </string-array>

    <string-array name="priority_array">
        <item>Not Set</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="filters">
        <item>No Filter</item>
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
        <item>No Priority</item>
        <item>Completed</item>
        <item>Not Completed</item>
        <item>Work</item>
        <item>Personal</item>
        <item>School</item>
        <item>No Group</item>
    </string-array>

    <string-array name="theme_list_preferences">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="theme_list_preferences_default">Dark</string>

    <string-array name="auto_delete_list_preferences">
        <item>Off</item>
        <item>When Checked</item>
        <item>After specified time</item>
        <item>When task limit reached</item>
    </string-array>
    <string name="auto_delete_list_preferences_default">When Checked</string>
    <string name="about_license">
        Released under the &lt;a href=\"http://www.gnu.org/licenses/gpl.txt\">GNU Public License.&lt;/a></string>
    <string name="about_madeby">&lt;a href=\"http://jamesfrost.me\">Made by James Frost.&lt;/a>\n</string>

</resources>
